[MPIR-90] Bad style in text "Access from behind a firewall"
git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@646062 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/resources/project-info-report.properties
+++ b/src/main/resources/project-info-report.properties
@@ -128,7 +128,7 @@ report.mailing-lists.name                                          = Mailing Lis
 report.mailing-lists.nolist                                        = There are no mailing lists currently associated with this project.
 report.mailing-lists.title                                         = Project Mailing Lists
 report.scm.accessbehindfirewall.cvs.intro                          = For those developers who are stuck behind a corporate firewall, {CVSGrab, http://cvsgrab.sourceforge.net/} can use the viewcvs web interface to checkout the source code.
-report.scm.accessbehindfirewall.general.intro                      = Refer to the documentation of the SCM used for more information about an access behind a firewall.
+report.scm.accessbehindfirewall.general.intro                      = Refer to the documentation of the SCM used for more information about access behind a firewall.
 report.scm.accessbehindfirewall.svn.intro                          = For those users who are stuck behind a corporate firewall which is blocking http access to the Subversion repository, you can try to access it via the developer connection:
 report.scm.accessbehindfirewall.title                              = Access from behind a firewall
 report.scm.accessthroughtproxy.svn.intro1                          = The Subversion client can go through a proxy, if you configure it to do so. First, edit your "servers" configuration file to indicate which proxy to use. The files location depends on your operating system. On Linux or Unix it is located in the directory "~/.subversion". On Windows it is in "%APPDATA%\\Subversion". (Try "echo %APPDATA%", note this is a hidden directory.)
