[MPIR-80] added Java requirements to the Dependency Report Submitted by: Niall Pemberton Reviewed by: Hervé Boutemy
git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@649973 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/resources/project-info-report.properties
+++ b/src/main/resources/project-info-report.properties
@@ -77,6 +77,13 @@ report.dependencies.repo.locations.column.repoid                   = Repo ID
 report.dependencies.repo.locations.column.snapshot                 = Snapshot
 report.dependencies.repo.locations.column.url                      = URL
 report.dependencies.repo.locations.title                           = Dependency Repository Locations
+report.dependencies.java.section.title                             = Java Version
+report.dependencies.java.minimum                                   = This project requires a minimum of Java {0}.
+report.dependencies.java.options.notset                            = It has been built using Java {0} (the compiler -source and -target options were not set).
+report.dependencies.java.options.same                              = It has been built using Java {0} with the compiler -source and -target options set to Java {1}.
+report.dependencies.java.options.different                         = It has been built using Java {0} with the compiler -source option set to Java {1} and the -target option set to Java {2}.
+report.dependencies.java.options.source                            = It has been built using Java {0} with the compiler -source option set to Java {1} (-target option not set).
+report.dependencies.java.options.target                            = It has been built using Java {0} with the compiler -target option set to Java {1} (-source option not set).
 report.dependencies.title                                          = Project Dependencies
 report.dependencies.unamed                                         = Unamed
 report.dependency-convergence.convergence.caption                  = Dependencies used in sub-projects
