MPIR-94: Change optional label in dependencies site
o added yes/no for optional dependencies
o translated key

git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@659261 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/resources/project-info-report.properties
+++ b/src/main/resources/project-info-report.properties
@@ -41,6 +41,8 @@ report.dependencies.column.classifier                              = Classifier
 report.dependencies.column.description                             = Description
 report.dependencies.column.groupId                                 = GroupId
 report.dependencies.column.optional                                = Optional
+report.dependencies.column.isOptional                              = Yes
+report.dependencies.column.isNotOptional                           = No
 report.dependencies.column.type                                    = Type
 report.dependencies.column.url                                     = URL
 report.dependencies.column.version                                 = Version
@@ -231,6 +233,6 @@ report.dependencyManagement.intro.runtime                          = The followi
 report.dependencyManagement.intro.system                           = The following is a list of system dependencies in the DependencyManagement of this project. These dependencies can be included in the submodules to compile the submodule:
 report.dependencyManagement.intro.test                             = The following is a list of test dependencies in the DependencyManagement of this project. These dependencies can be included in the submodules to compile and run unit tests for the submodule:
 report.pluginManagement.name                                       = Plugin Management
-report.pluginManagement.description                                = This document lists the plugins that are defined through pluginManagement. 
+report.pluginManagement.description                                = This document lists the plugins that are defined through pluginManagement.
 report.pluginManagement.title                                      = Project Plugin Management
 report.pluginManagement.nolist                                     = There are no plugins in the PluginManagement of this project.
