--- a/src/main/resources/project-info-report.properties
+++ b/src/main/resources/project-info-report.properties
@@ -56,6 +56,7 @@ report.dependencies.file.details.column.packages                   = Packages
 report.dependencies.file.details.column.sealed                     = Sealed
 report.dependencies.file.details.column.size                       = Size
 report.dependencies.file.details.title                             = Dependency File Details
+report.dependencies.file.details.total                             = Total
 report.dependencies.graph.tables.licenses                          = Licenses
 report.dependencies.graph.tables.unknown                           = Unknown
 report.dependencies.graph.title                                    = Project Dependency Graph
