--- a/pom.xml
+++ b/pom.xml
@@ -325,35 +325,40 @@ under the License.
     </dependency>
   </dependencies>
 
-  <reporting>
-    <plugins>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>l10n-maven-plugin</artifactId>
-        <version>1.0-alpha-1</version>
-        <configuration>
-          <locales>
-            <locale>cs</locale>
-            <locale>de</locale>
-            <locale>es</locale>
-            <locale>fr</locale>
-            <locale>hu</locale>
-            <locale>it</locale>
-            <locale>ja</locale>
-            <locale>ko</locale>
-            <locale>nl</locale>
-            <locale>no</locale>
-            <locale>pl</locale>
-            <locale>pt_BR</locale>
-            <locale>sk</locale>
-            <locale>sv</locale>
-            <locale>tr</locale>
-            <locale>zh_CN</locale>
-          </locales>
-        </configuration>
-      </plugin>
-    </plugins>
-  </reporting>
+  <profiles>
+    <profile>
+      <id>reporting</id>
+      <reporting>
+        <plugins>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>l10n-maven-plugin</artifactId>
+            <version>1.0-alpha-1</version>
+            <configuration>
+              <locales>
+                <locale>cs</locale>
+                <locale>de</locale>
+                <locale>es</locale>
+                <locale>fr</locale>
+                <locale>hu</locale>
+                <locale>it</locale>
+                <locale>ja</locale>
+                <locale>ko</locale>
+                <locale>nl</locale>
+                <locale>no</locale>
+                <locale>pl</locale>
+                <locale>pt_BR</locale>
+                <locale>sk</locale>
+                <locale>sv</locale>
+                <locale>tr</locale>
+                <locale>zh_CN</locale>
+              </locales>
+            </configuration>
+          </plugin>
+        </plugins>
+      </reporting>
+    </profile>
+  </profiles>
 
   <properties>
     <doxiaVersion>1.0-alpha-11</doxiaVersion>
