o junit-addons should be in test scope
git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@675945 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -321,6 +321,7 @@ under the License.
       <groupId>junit-addons</groupId>
       <artifactId>junit-addons</artifactId>
       <version>1.4</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
