MPIR-125: Create a plugin report
o first implementation
o added some keys

git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@676578 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/resources/project-info-report.properties
+++ b/src/main/resources/project-info-report.properties
@@ -235,3 +235,9 @@ report.dependencyManagement.intro.test                             = The followi
 report.pluginManagement.name                                       = Plugin Management
 report.pluginManagement.description                                = This document lists the plugins that are defined through pluginManagement.
 report.pluginManagement.title                                      = Project Plugin Management
+report.plugins.name                                                = Project Plugins
+report.plugins.description                                         = This document lists the build plugins and the report plugins used by this project.
+report.plugins.title                                               = Project Build Plugins
+report.plugins.report.title                                        = Project Report Plugins
+report.plugins.nolist                                              = There are no plugins defined in the Build part of this project.
+report.plugins.report.nolist                                       = There are no plugins reports defined in the Reporting part of this project.
