o take care if the repo is blacklisted or not o ping repo url before calling wagon to prevent TransferFailedException o display stacktrace for error logs in dependencyExistsInRepo() only if log is in debug mode o added a new Blacklisted column in Dependency Repository Locations table
git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@676627 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/resources/project-info-report.properties
+++ b/src/main/resources/project-info-report.properties
@@ -73,7 +73,10 @@ report.dependencies.repo.locations.cell.release.disabled           = -
 report.dependencies.repo.locations.cell.release.enabled            = Yes
 report.dependencies.repo.locations.cell.snapshot.disabled          = -
 report.dependencies.repo.locations.cell.snapshot.enabled           = Yes
+report.dependencies.repo.locations.cell.blacklisted.disabled       = -
+report.dependencies.repo.locations.cell.blacklisted.enabled        = Yes
 report.dependencies.repo.locations.column.artifact                 = Artifact
+report.dependencies.repo.locations.column.blacklisted              = Blacklisted
 report.dependencies.repo.locations.column.release                  = Release
 report.dependencies.repo.locations.column.repoid                   = Repo ID
 report.dependencies.repo.locations.column.snapshot                 = Snapshot
