--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,11 @@ under the License.
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.4.3</version>
         </plugin>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>clirr-maven-plugin</artifactId>
+          <version>2.2.1</version>
+        </plugin>
       </plugins>
     </pluginManagement>
     <plugins>
