--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,30 @@ under the License.
     </plugins>
   </build>
 
+  <reporting>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-changes-plugin</artifactId>
+        <version>2.0</version>
+        <configuration>
+          <!-- For JIRA-report -->
+          <columnNames>Type,Key,Summary,Assignee,Status,Resolution,Fix Version</columnNames>
+          <onlyCurrentVersion>true</onlyCurrentVersion>
+          <resolutionIds>Closed</resolutionIds>
+          <sortColumnNames>Type,Key</sortColumnNames>
+        </configuration>
+        <reportSets>
+          <reportSet>
+            <reports>
+              <report>jira-report</report>
+            </reports>
+          </reportSet>
+        </reportSets>
+      </plugin>
+    </plugins>
+  </reporting>
+
   <dependencies>
     <!-- Maven -->
     <dependency>
