--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@ under the License.
   </parent>
 
   <artifactId>maven-project-info-reports-plugin</artifactId>
-  <version>2.1-SNAPSHOT</version>
+  <version>2.1</version>
   <packaging>maven-plugin</packaging>
   <name>Maven Project Info Reports Plugin</name>
   <description>
@@ -60,9 +60,9 @@ under the License.
   </contributors>
 
   <scm>
-    <connection>scm:svn:http://svn.apache.org/repos/asf/maven/plugins/trunk/maven-project-info-reports-plugin/</connection>
-    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/maven/plugins/trunk/maven-project-info-reports-plugin/</developerConnection>
-    <url>http://svn.apache.org/viewvc/maven/plugins/trunk/maven-project-info-reports-plugin/</url>
+    <connection>scm:svn:http://svn.apache.org/repos/asf/maven/plugins/tags/maven-project-info-reports-plugin-2.1</connection>
+    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/maven/plugins/tags/maven-project-info-reports-plugin-2.1</developerConnection>
+    <url>http://svn.apache.org/viewvc/maven/plugins/tags/maven-project-info-reports-plugin-2.1</url>
   </scm>
 
   <build>
