--- a/src/main/resources/project-info-report.properties
+++ b/src/main/resources/project-info-report.properties
@@ -55,6 +55,9 @@ report.dependencies.file.details.column.jdkrev                     = JDK Rev
 report.dependencies.file.details.column.packages                   = Packages
 report.dependencies.file.details.column.sealed                     = Sealed
 report.dependencies.file.details.column.size                       = Size
+report.dependencies.file.details.column.size.gb                    = GB
+report.dependencies.file.details.column.size.mb                    = MB
+report.dependencies.file.details.column.size.kb                    = kB
 report.dependencies.file.details.title                             = Dependency File Details
 report.dependencies.file.details.total                             = Total
 report.dependencies.graph.tables.licenses                          = Licenses
