--- a/pom.xml
+++ b/pom.xml
@@ -386,6 +386,7 @@ under the License.
         <plugins>
           <plugin>
             <artifactId>maven-invoker-plugin</artifactId>
+            <version>1.3</version>
             <configuration>
               <debug>true</debug>
               <projectsDirectory>src/it</projectsDirectory>
@@ -396,7 +397,7 @@ under the License.
               <pomExcludes>
                 <pomExclude>pom.xml</pomExclude>
               </pomExcludes>
-              <postBuildHookScript>verify.bsh</postBuildHookScript>
+              <postBuildHookScript>verify</postBuildHookScript>
               <localRepositoryPath>${project.build.directory}/local-repo</localRepositoryPath>
               <settingsFile>src/it/settings.xml</settingsFile>
               <goals>
