o Use released version of l10n-maven-plugin.
git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@738302 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -335,7 +335,7 @@ under the License.
           <plugin>
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>l10n-maven-plugin</artifactId>
-            <version>1.0-alpha-2-SNAPSHOT</version>
+            <version>1.0-alpha-2</version>
             <configuration>
               <locales>
                 <locale>cs</locale>
