[MSITE-382] Add localization for zh_TW. Submitted by: Poyi Wu
git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@742183 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -355,6 +355,7 @@ under the License.
                 <locale>sv</locale>
                 <locale>tr</locale>
                 <locale>zh_CN</locale>
+                <locale>zh_TW</locale>
               </locales>
             </configuration>
           </plugin>
