[MPIR-295] Enhancements on dependency convergence report
Submitted by: Simon Wang <wangyf2010@gmail.com>
From: https://github.com/apache/maven-plugins/pull/23

git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@1601206 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,10 @@ under the License.
     <contributor>
       <name>Gabriel Belingueres</name>
     </contributor>
+    <contributor>
+      <name>Simon Wang</name>
+      <email>wangyf2010@gmail.com</email>
+    </contributor>
   </contributors>
 
   <prerequisites>
@@ -185,6 +189,11 @@ under the License.
       <groupId>org.apache.maven.plugin-tools</groupId>
       <artifactId>maven-plugin-annotations</artifactId>
       <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.maven.shared</groupId>
+      <artifactId>maven-common-artifact-filters</artifactId>
+      <version>1.4</version>
     </dependency>
 
     <!-- Wagon -->
