[MPIR-305] Upgrade Doxia + Site Tools to 1.6
git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@1636067 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/resources/project-info-report.properties
+++ b/src/main/resources/project-info-report.properties
@@ -247,7 +247,7 @@ report.team-list.intro.title                                       = The Team
 report.team-list.name                                              = Project Team
 report.team-list.nocontributor                                     = There are no contributors listed for this project. Please check back again later.
 report.team-list.nodeveloper                                       = There are no developers working on this project.
-report.team-list.title                                             = Team list
+report.team-list.title                                             = Project Team
 report.dependencyManagement.name                                   = Dependency Management
 report.dependencyManagement.description                            = This document lists the dependencies that are defined through dependencyManagement.
 report.dependencyManagement.title                                  = Project Dependency Management
