--- a/src/main/resources/project-info-report.properties
+++ b/src/main/resources/project-info-report.properties
@@ -26,6 +26,7 @@ report.cim.general.intro                                           = This projec
 report.cim.hudson.intro                                            = This project uses {Hudson, http://hudson-ci.org/}.
 report.cim.jenkins.intro                                           = This project uses {Jenkins, http://jenkins-ci.org/}.
 report.cim.luntbuild.intro                                         = This project uses {Luntbuild, http://luntbuild.javaforge.com/}.
+report.cim.travis.intro                                            = This project uses {Travis CI, https://travis-ci.org/}.
 report.cim.name                                                    = Continuous Integration
 report.cim.nocim                                                   = No continuous integration management system is defined. Please check back at a later date.
 report.cim.notifiers.column.address                                = Address
