--- a/src/test/resources/plugin-configs/subproject2/pom.xml
+++ b/src/test/resources/plugin-configs/subproject2/pom.xml
@@ -23,6 +23,7 @@ under the License.
     <groupId>org.apache.maven.plugin.projectinfo.tests</groupId>
     <artifactId>dependency-convergence</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <relativePath>../dependency-convergence-plugin-config.xml</relativePath>
   </parent>
   <groupId>org.apache.maven.plugin.projectinfo.tests</groupId>
   <artifactId>project2</artifactId>
