[MPIR-279] fixed MPIR-229 IT which was inadvertently broken
git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@1641094 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/it/mpir-229/module1/pom.xml
+++ b/src/it/mpir-229/module1/pom.xml
@@ -33,4 +33,11 @@
 
   <url>${artifacts.url}/${project.artifactId}-${project.version}</url>
 
+  <distributionManagement>
+    <site>
+      <id>site</id>
+      <url>scp://my.server/${project.artifactId}-${project.version}</url>
+    </site>
+  </distributionManagement>
+
 </project>
