[MPIR-315] Replace org.apache.maven.shared:maven-doxia-tools with org.apache.maven.doxia:doxia-integration-tools
git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@1643604 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -174,9 +174,9 @@ under the License.
       <version>2.2</version>
     </dependency>
     <dependency>
-      <groupId>org.apache.maven.shared</groupId>
-      <artifactId>maven-doxia-tools</artifactId>
-      <version>1.4</version>
+      <groupId>org.apache.maven.doxia</groupId>
+      <artifactId>doxia-integration-tools</artifactId>
+      <version>1.6</version>
     </dependency>
     <dependency>
       <groupId>org.apache.maven.shared</groupId>
