Fixing apache-rat-plugin configuration to add the child elements instead of replacing them.
git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@1643606 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -402,7 +402,7 @@ under the License.
           <groupId>org.apache.rat</groupId>
           <artifactId>apache-rat-plugin</artifactId>
           <configuration>
-            <excludes>
+            <excludes combine.children="append">
               <!--
                 This is a plugin-specific data file that must only contain the file names of available resources.
               -->
