--- a/src/main/resources/project-info-report.properties
+++ b/src/main/resources/project-info-report.properties
@@ -193,9 +193,9 @@ report.scm.perforce.intro                                          = This projec
 report.scm.starteam.intro                                          = This project uses {Starteam, http://www.borland.com/us/products/starteam/} to manage its source code.
 report.scm.svn.intro                                               = This project uses {Subversion, http://subversion.apache.org/} to manage its source code. Instructions on Subversion use can be found at {http://svnbook.red-bean.com/, http://svnbook.red-bean.com/}.
 report.scm.title                                                   = Source Repository
-report.scm.webaccess.nourl                                         = There is no online source repository listed for this project. Please check back again later.
-report.scm.webaccess.title                                         = Web Access
-report.scm.webaccess.url                                           = The following is a link to the online source repository:
+report.scm.webaccess.nourl                                         = There is no browsable version of the source repository listed for this project. Please check back again later.
+report.scm.webaccess.title                                         = Web Browser Access
+report.scm.webaccess.url                                           = The following is a link to a browsable version of the source repository:
 report.summary.build.artifactid                                    = ArtifactId
 report.summary.build.groupid                                       = GroupId
 report.summary.build.javaVersion                                   = Java Version
