[MPIR-288] Add a skipEmptyReport option
Generally, report generation is now skipped by defualt if the appropriate section(s) of the POM are not filled.

* Resolved a few TODOs
* Added a few TODOs to which need to be resolved before MPIR-288 can be applied to all reports
* Adaptes minimal-pom IT for new option

git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@1643888 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -439,7 +439,7 @@ under the License.
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jarsigner-plugin</artifactId>
-        <executions>
+<!--        <executions>
           <execution>
             <id>sign</id>
             <goals>
@@ -452,7 +452,7 @@ under the License.
               <goal>verify</goal>
             </goals>
           </execution>
-        </executions>
+        </executions>-->
       </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
