[MPIR-288] Add a skipEmptyReport option
* Resolved a few TODOs
* Adapted full-/minimal-pom IT for fixed reports

git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@1643913 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/it/full-pom/pom.xml
+++ b/src/it/full-pom/pom.xml
@@ -201,6 +201,7 @@
               <report>dependency-info</report>
               <report>dependency-management</report>
               <report>dependencies</report>
+              <report>dependency-convergence</report>
               <report>cim</report>
               <report>plugin-management</report>
               <report>plugins</report>
