--- a/src/main/resources/project-info-report.properties
+++ b/src/main/resources/project-info-report.properties
@@ -264,6 +264,7 @@ report.dependencyManagement.intro.provided                         = The followi
 report.dependencyManagement.intro.runtime                          = The following is a list of runtime dependencies in the DependencyManagement of this project. These dependencies can be included in the submodules to run the submodule:
 report.dependencyManagement.intro.system                           = The following is a list of system dependencies in the DependencyManagement of this project. These dependencies can be included in the submodules to compile the submodule:
 report.dependencyManagement.intro.test                             = The following is a list of test dependencies in the DependencyManagement of this project. These dependencies can be included in the submodules to compile and run unit tests for the submodule:
+report.pluginManagement.nolist                                     = There are no plugins defined in the PluginManagement part of this project.
 report.pluginManagement.name                                       = Plugin Management
 report.pluginManagement.description                                = This document lists the plugins that are defined through pluginManagement.
 report.pluginManagement.title                                      = Project Plugin Management
@@ -273,6 +274,7 @@ report.plugins.title                                               = Project Bui
 report.plugins.report.title                                        = Project Report Plugins
 report.plugins.nolist                                              = There are no plugins defined in the Build part of this project.
 report.plugins.report.nolist                                       = There are no plugins reports defined in the Reporting part of this project.
+report.modules.nolist                                              = There are no modules declared in this project.
 report.modules.name                                                = Project Modules
 report.modules.description                                         = This document lists the modules (sub-projects) of this project.
 report.modules.title                                               = Project Modules
