Added localization strings for verbatim copy of a URL-based license
git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@1643943 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/resources/project-info-report.properties
+++ b/src/main/resources/project-info-report.properties
@@ -141,6 +141,8 @@ report.license.name                                                = Project Lic
 report.license.nolicense                                           = No license is defined for this project.
 report.license.overview.intro                                      = Typically the licenses listed for the project are that of the project itself, and not of dependencies.
 report.license.overview.title                                      = Overview
+report.license.originalText                                        = [Original text]
+report.license.copy                                                = Copy of the license follows:
 report.license.title                                               = Project License
 report.mailing-lists.column.archive                                = Archive
 report.mailing-lists.column.name                                   = Name
