[MPIR-313] License name is mandatory but it is not validated
git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@1644770 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/resources/project-info-report.properties
+++ b/src/main/resources/project-info-report.properties
@@ -144,6 +144,7 @@ report.license.overview.title                                      = Overview
 report.license.originalText                                        = [Original text]
 report.license.copy                                                = Copy of the license follows:
 report.license.title                                               = Project License
+report.license.unnamed                                             = Unnamed
 report.mailing-lists.column.archive                                = Archive
 report.mailing-lists.column.name                                   = Name
 report.mailing-lists.column.otherArchives                          = Other Archives
