--- a/src/main/resources/project-info-report.properties
+++ b/src/main/resources/project-info-report.properties
@@ -93,7 +93,7 @@ report.dependencies.repo.locations.column.snapshot                 = Snapshot
 report.dependencies.repo.locations.column.url                      = URL
 report.dependencies.repo.locations.title                           = Dependency Repository Locations
 report.dependencies.title                                          = Project Dependencies
-report.dependencies.unamed                                         = Unamed
+report.dependencies.unnamed                                        = Unnamed
 report.dependencies.transitive.intro                               = The following is a list of transitive dependencies for this project. Transitive dependencies are the dependencies of the project dependencies.
 report.dependencies.transitive.nolist                              = No transitive dependencies are required for this project.
 report.dependencies.transitive.title                               = Project Transitive Dependencies
