--- a/src/it/full-pom/pom.xml
+++ b/src/it/full-pom/pom.xml
@@ -173,7 +173,7 @@
         <artifactId>maven-site-plugin</artifactId>
         <version>@sitePluginVersion@</version>
         <configuration>
-          <locales>en,cs,de,es,fr,hu,it,ja,ko,nl,no,pl,pt,pt_BR,sk,sv,tr,zh_CN,zh_TW</locales>
+          <locales>cs,de,en,es,fr,gl,hu,it,ja,ko,lt,nl,no,pl,pt,pt_BR,ru,sk,sv,tr,zh_CN,zh_TW</locales>
         </configuration>
       </plugin>
     </plugins>
