Make consistent use of Yes/No in dependencies report
git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@1645364 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/resources/project-info-report.properties
+++ b/src/main/resources/project-info-report.properties
@@ -79,11 +79,11 @@ report.dependencies.intro.test                                     = The followi
 report.dependencies.name                                           = Dependencies
 report.dependencies.nolist                                         = There are no dependencies for this project. It is a standalone application that does not depend on any other project.
 report.dependencies.repo.locations.artifact.breakdown              = Repository locations for each of the Dependencies.
-report.dependencies.repo.locations.cell.release.disabled           = -
+report.dependencies.repo.locations.cell.release.disabled           = No
 report.dependencies.repo.locations.cell.release.enabled            = Yes
-report.dependencies.repo.locations.cell.snapshot.disabled          = -
+report.dependencies.repo.locations.cell.snapshot.disabled          = No
 report.dependencies.repo.locations.cell.snapshot.enabled           = Yes
-report.dependencies.repo.locations.cell.blacklisted.disabled       = -
+report.dependencies.repo.locations.cell.blacklisted.disabled       = No
 report.dependencies.repo.locations.cell.blacklisted.enabled        = Yes
 report.dependencies.repo.locations.column.artifact                 = Artifact
 report.dependencies.repo.locations.column.blacklisted              = Blacklisted
