--- a/src/it/multi-module/invoker.properties
+++ b/src/it/multi-module/invoker.properties
@@ -15,5 +15,5 @@
 # specific language governing permissions and limitations
 # under the License.
 
-invoker.goals.1=clean package
+invoker.goals.1=clean install
 invoker.goals.2=site
