[MPIR-263] improved minimum java requirement when m-compiler-p not explicitely configured: use default properties
git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@1647803 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/it/java-version/pom.xml
+++ b/src/it/java-version/pom.xml
@@ -43,4 +43,15 @@
     <module>pluginManagement</module>
     <module>property</module>
   </modules>
+
+  <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.2</version>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
 </project>
