--- a/src/it/java-version/invoker.properties
+++ b/src/it/java-version/invoker.properties
@@ -15,4 +15,4 @@
 # specific language governing permissions and limitations
 # under the License.
 
-invoker.goals = project-info-reports:summary
+invoker.goals = ${project.groupId}:${project.artifactId}:${project.version}:summary
