--- a/pom.xml
+++ b/pom.xml
@@ -487,6 +487,11 @@ under the License.
       <reporting>
         <plugins>
           <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-project-info-reports-plugin</artifactId>
+            <version>${project.version}</version>
+          </plugin>
+          <plugin>
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>l10n-maven-plugin</artifactId>
             <version>1.0-alpha-2</version>
