--- a/pom.xml
+++ b/pom.xml
@@ -530,7 +530,7 @@ under the License.
               <columnNames>Type,Key,Summary,Assignee,Status,Resolution,Fix Version</columnNames>
               <maxEntries>200</maxEntries>
               <onlyCurrentVersion>true</onlyCurrentVersion>
-              <resolutionIds>Closed</resolutionIds>
+              <resolutionIds>Fixed</resolutionIds>
               <sortColumnNames>Type,Key</sortColumnNames>
             </configuration>
             <reportSets>
