--- a/pom.xml
+++ b/pom.xml
@@ -527,7 +527,7 @@ under the License.
             <version>2.11</version>
             <configuration>
               <!-- For JIRA report -->
-              <columnNames>Type,Key,Summary,Assignee,Status,Resolution,Fix Version</columnNames>
+              <columnNames>Type,Key,Summary,Assignee</columnNames>
               <maxEntries>200</maxEntries>
               <onlyCurrentVersion>true</onlyCurrentVersion>
               <resolutionIds>Fixed</resolutionIds>
