--- a/src/main/resources/project-info-report.properties
+++ b/src/main/resources/project-info-report.properties
@@ -129,7 +129,7 @@ report.issuetracking.custom.intro                                  = This projec
 report.issuetracking.description                                   = This document provides information on the issue management system used in this project.
 report.issuetracking.general.intro                                 = This project uses an Issue Management System to manage its issues.
 report.issuetracking.intro                                         = Issues, bugs, and feature requests should be submitted to the following issue tracking system for this project.
-report.issuetracking.jira.intro                                    = This project uses {JIRA, http://www.atlassian.com/software/jira} a J2EE-based, issue tracking and project management application.
+report.issuetracking.jira.intro                                    = This project uses {JIRA, http://www.atlassian.com/software/jira}.
 report.issuetracking.name                                          = Issue Tracking
 report.issuetracking.noissueManagement                             = No issue management system is defined. Please check back at a later date.
 report.issuetracking.overview.title                                = Overview
