--- a/pom.xml
+++ b/pom.xml
@@ -102,7 +102,7 @@ under the License.
   </scm>
   <issueManagement>
     <system>JIRA</system>
-    <url>http://jira.codehaus.org/browse/MPIR</url>
+    <url>https://issues.apache.org/jira/browse/MPIR</url>
   </issueManagement>
   <distributionManagement>
     <site>
