defining push url in anonymous connection does not have any meaning
git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@1697123 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/it/git/push/pom.xml
+++ b/src/it/git/push/pom.xml
@@ -40,7 +40,7 @@
   </modules>
 
   <scm>
-    <connection>scm:git:[fetch=]http://git-wip-us.apache.org/repos/asf/maven.git[push=]ssh://git-wip-us.apache.org/repos/asf/maven.git</connection>
+    <connection>scm:git:http://git-wip-us.apache.org/repos/asf/maven.git</connection>
     <developerConnection>scm:git:[fetch=]http://git-wip-us.apache.org/repos/asf/maven.git[push=]ssh://git-wip-us.apache.org/repos/asf/maven.git</developerConnection>
   </scm>
 </project>
