avoid Maven 3.3.x regression on properties interpolation (will open a MNG issue...)
git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@1701424 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/it/java-version/plugin/pom.xml
+++ b/src/it/java-version/plugin/pom.xml
@@ -29,7 +29,7 @@ under the License.
     <version>1.0-SNAPSHOT</version>
   </parent>
   <artifactId>plugin</artifactId>
-  <name>target bytecode defined by plugin configuration</name>
+  <name>target bytecode defined by plugin configuration: 1.5 expected</name>
 
   <properties><!-- will be overridden -->
     <maven.compiler.source>1.3</maven.compiler.source>
