--- a/src/it/java-version/property/pom.xml
+++ b/src/it/java-version/property/pom.xml
@@ -29,10 +29,12 @@ under the License.
     <version>1.0-SNAPSHOT</version>
   </parent>
   <artifactId>property</artifactId>
-  <name>target bytecode defined by maven.compiler.target property</name>
+  <name>target bytecode defined by maven.compiler.target property: 1.3 expected</name>
 
   <properties>
     <maven.compiler.source>1.3</maven.compiler.source>
-    <maven.compiler.target>${maven.compiler.source}</maven.compiler.target>
+    <maven.compiler.target>1.3</maven.compiler.target>
+    <!--maven.compiler.target>${maven.compiler.source}</maven.compiler.target-->
+    <!-- with Maven 3.3.x, this ${maven.compiler.source} property is interpolated to 1.5 instead of 1.3...-->
   </properties>
 </project>
