[MINVOKER-194] removed config for analysis now that this is explained by invoker config in parent pom (see r1646983)
git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@1701499 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/it/java-version/invoker.properties
+++ b/src/it/java-version/invoker.properties
@@ -15,4 +15,4 @@
 # specific language governing permissions and limitations
 # under the License.
 
-invoker.goals = ${project.groupId}:${project.artifactId}:${project.version}:summary help:effective-pom -Doutput=effective-poms.xml
+invoker.goals = ${project.groupId}:${project.artifactId}:${project.version}:summary
