--- a/src/it/java-version/pluginManagement/pom.xml
+++ b/src/it/java-version/pluginManagement/pom.xml
@@ -32,8 +32,8 @@ under the License.
   <name>target bytecode defined by pluginManagement configuration: 1.4 expected</name>
 
   <properties><!-- will be overridden -->
-    <maven.compiler.source>1.3</maven.compiler.source>
-    <maven.compiler.target>${maven.compiler.source}</maven.compiler.target>
+    <maven.compiler.source>${maven.compiler.target}</maven.compiler.source>
+    <maven.compiler.target>1.3</maven.compiler.target>
   </properties>
 
   <build>
