[MPIR-337] Localize sealed information on JARs
git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@1721853 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/resources/project-info-report.properties
+++ b/src/main/resources/project-info-report.properties
@@ -53,6 +53,8 @@ report.dependencies.column.version                                 = Version
 report.dependencies.description                                    = This document lists the project's dependencies and provides information on each dependency.
 report.dependencies.file.details.cell.debuginformation.yes         = Yes
 report.dependencies.file.details.cell.debuginformation.no          = No
+report.dependencies.file.details.cell.sealed.yes                   = Yes
+report.dependencies.file.details.cell.sealed.no                    = No
 report.dependencies.file.details.column.classes                    = Classes
 report.dependencies.file.details.column.debuginformation           = Debug Information
 report.dependencies.file.details.column.entries                    = Entries
