[MPIR-338] Localize alternative text for used icons
git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@1727771 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/resources/project-info-report.properties
+++ b/src/main/resources/project-info-report.properties
@@ -69,6 +69,8 @@ report.dependencies.file.details.column.size.kb                    = kB
 report.dependencies.file.details.columntitle.debuginformation      = Indicates whether these dependencies have been compiled with debug information.
 report.dependencies.file.details.title                             = Dependency File Details
 report.dependencies.file.details.total                             = Total
+report.dependencies.graph.icon.close                               = [Close]
+report.dependencies.graph.icon.information                         = [Information]
 report.dependencies.graph.tables.licenses                          = Licenses
 report.dependencies.graph.tables.unknown                           = Unknown
 report.dependencies.graph.title                                    = Project Dependency Graph
@@ -102,6 +104,8 @@ report.dependencies.transitive.title                               = Project Tra
 report.dependency-convergence.convergence.caption                  = Dependencies used in modules
 report.dependency-convergence.convergence.single.caption           = Dependencies used in this project
 report.dependency-convergence.description                          = This document presents the convergence of dependency versions across the entire project, and its sub modules.
+report.dependency-convergence.icon.error                           = [Error]
+report.dependency-convergence.icon.success                         = [Success]
 report.dependency-convergence.legend                               = Legend:
 report.dependency-convergence.legend.different                     = At least one dependency has a differing version of the dependency or has SNAPSHOT dependencies.
 report.dependency-convergence.legend.shared                        = All modules/dependencies share one version of the dependency.
